# registry-service

./: .dockerignore  .env.docker-example  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.keycloak  README.md  alembic.ini  dev_registry_keycloak_realm.json  docker-compose.yml  pyproject.toml  realm-export.json  requirements.txt
.github/workflows/: build-image.yaml
intersect_registry_service/: __main__.py  main.py
intersect_registry_service/api/v1/: __init__.py
intersect_registry_service/api/v1/endpoints/: general.py  sdk.py
intersect_registry_service/app/: main.py
intersect_registry_service/app/api/: __init__.py
intersect_registry_service/app/api/v1/: __init__.py  api_key.py
intersect_registry_service/app/api/v1/endpoints/: auth.py  general.py  sdk.py
intersect_registry_service/app/api/v1/endpoints/sdk/: definitions.py  impl_devmode.py  impl_real.py
intersect_registry_service/app/auth/: __init__.py  definitions.py  session.py  user.py
intersect_registry_service/app/auth/impl/: __init__.py  keycloak.py  rudimentary.py
intersect_registry_service/app/auth/impl_keycloak/: get_user.py  session_manager.py
intersect_registry_service/app/auth/impl_rudimentary/: get_user.py  session_manager.py
intersect_registry_service/app/control_plane/: __init__.py
intersect_registry_service/app/control_plane/brokers/: __init__.py  rabbitmq.py
intersect_registry_service/app/control_plane/protocols/: amqp0_9_1.py  mqtt5_0.py
intersect_registry_service/app/core/: configuration_manager.py  definitions.py  environment.py  log_config.py  run_migrations.py
intersect_registry_service/app/middlewares/: csrf.py  logging_context.py
intersect_registry_service/app/models/: broker.py  service.py
intersect_registry_service/app/ui/: __init__.py  templating.py
intersect_registry_service/app/ui/endpoints/: login.py  login_keycloak.py  login_rudimentary.py  microservice_user.py
intersect_registry_service/app/ui/static/css/: style.css
intersect_registry_service/app/ui/templates/layouts/: layout.jinja  user-layout.jinja
intersect_registry_service/app/ui/templates/pages/: keycloak-login-page.jinja  login-page.jinja  microservice-user-page.jinja  non-keycloak-login-page.jinja
intersect_registry_service/app/ui/templates/partials/: login-page-error-partial.jinja  service-list-partial-oob.jinja  service-list-partial.jinja  service-submit-error-partial.jinja
intersect_registry_service/app/utils/: broker_credentials.py  html_security_headers.py  htmx.py  urls.py
intersect_registry_service/auth/: __init__.py  session.py
intersect_registry_service/auth/impl/: __init__.py  rudimentary.py
intersect_registry_service/control_plane/brokers/: rabbitmq.py
intersect_registry_service/control_plane/protocols/: __init__.py  amqp0_9_1.py  mqtt5_0.py
intersect_registry_service/core/: definitions.py  environment.py  log_config.py  run_migrations.py
intersect_registry_service/middlewares/: exceptions.py
intersect_registry_service/models/: __init__.py
intersect_registry_service/ui/: __init__.py
intersect_registry_service/ui/endpoints/: login.py  microservice_user.py
intersect_registry_service/ui/static/css/: style.css
intersect_registry_service/ui/templates/layouts/: layout.jinja  user-layout.jinja
intersect_registry_service/ui/templates/pages/: login-page.jinja
intersect_registry_service/ui/templates/partials/: service-submit-error-partial.jinja
intersect_registry_service/utils/: api_keys.py  client_name_generator.py  html_security_headers.py  htmx.py
keycloak/: Dockerfile  developer-realm-export.json
migrations/: env.py
migrations/versions/: 2025_04_15_1511-dadb8fbc6719_initial_service_setup.py
